fix color contrast

--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -551,7 +551,6 @@ a.assistive-text:focus,
 	color: #1982d1;
 }
 #site-description {
-	color: #7a7a7a;
 	font-size: 14px;
 	margin: 0 270px 3.65625em 0;
 }
